--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,3 +37,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: release/wwwroot
+        ENVIRONMENT_VARIABLES: BOT_TOKEN=${{ secrets.BOT_TOKEN }}
+        
